# MathHistoria

./: .env.example  .gitignore  README.md  config.py  gui.py  main.py  pyproject.toml  start_gui.bat  start_gui.sh
agents/: compiler.py  generator.py  outline.py  pdf_reader.py  pdf_tools.py  suggester.py
app/: pipeline.py  session.py  state.py
domain/: __init__.py  models.py
services/: __init__.py  assembly.py  cache.py  generation.py  planning.py  retrieval.py  tracing.py
utils/: keystore.py  security.py
