[project]
name = "mathhistoria"
version = "0.1.0"
description = "AI-powered mathematics history paper generator"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.0",
    "keyring>=25.0.0",
    "openai>=2.28.0",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "gradio>=4.0.0",
]

[project.scripts]
mathhistoria = "main:main"
